--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form5.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form5.html
@@ -1,9 +1,7 @@
-<div wc-field
-     field-dynamic-label="KAT_5.RBK"
-     field-dynamic-help-text="KAT_5.HLP">
-  <h5><span dynamic-label key="FRG_32.RBK"></span></h5>
-                    <textarea class="form-control" ng-model="viewState.intygModel.kommentar" wc-maxlength ng-trim="false"
-                              id="kommentar" maxlength="189" rows="4"
-                              ng-blur="validate()"></textarea>
+<div wc-field field-dynamic-label="KAT_5.RBK" field-dynamic-help-text="KAT_5.HLP">
+  <h5>
+    <span dynamic-label key="FRG_32.RBK"></span>
+  </h5>
+  <textarea class="form-control" ng-model="viewState.intygModel.kommentar" wc-maxlength ng-trim="false" id="kommentar" maxlength="189" rows="6" ng-blur="validate()"></textarea>
 </div>
 
