--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form7.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form7.html
@@ -1,67 +1,67 @@
 <a id="anchor-vardenhet" name="anchor.vardenhet"></a>
 <div id="vardenhetForm" wc-field field-label="ts-diabetes.label.vardenhet" field-has-errors="viewState.common.validation.messagesGrouped.vardenhet">
 
-  <label class="control-label">{{viewState.intygModel.grundData.skapadAv.vardenhet.enhetsnamn}}
-    ({{viewState.intygModel.grundData.skapadAv.vardenhet.enhetsid}}),
-    {{viewState.intygModel.grundData.skapadAv.vardenhet.vardgivare.vardgivarnamn}}</label>
+  <div id="vardenhetNamn">
+    <label class="control-label">{{viewState.intygModel.grundData.skapadAv.vardenhet.enhetsnamn}}
+      ({{viewState.intygModel.grundData.skapadAv.vardenhet.enhetsid}}),
+      {{viewState.intygModel.grundData.skapadAv.vardenhet.vardgivare.vardgivarnamn}}
+    </label>
+  </div>
 
   <div id="hsaInfo" class="alert alert-info" ng-show="viewState.common.hsaInfoMissing">
     Information om vårdenheten saknas i HSA-katalogen. Be den på vårdenheten som är ansvarig för
     frågor om HSA att uppdatera informationen.
   </div>
 
-  <div class="form-horizontal">
-
-    <div class="form-group">
-      <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('grunddata.skapadav.vardenhet.postadress')">
-        <div class="row">
-          <label class="col-md-3 control-label">Postadress *</label>
-          <div class="col-md-9">
-            <input type="text" class="form-control input-full" id="clinicInfoPostalAddress"
-                   name="clinicInfo.postalAddress" ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.postadress"
-                   maxlength="70" ng-blur="validate()">
-          </div>
+  <div class="form-horizontal form-group">
+    <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.postadress')">
+      <div class="row">
+        <label class="col-md-2 control-label">Postadress *</label>
+        <div class="col-md-10">
+          <input type="text" class="form-control input-full" id="clinicInfoPostalAddress"
+                 name="clinicInfo.postalAddress" ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.postadress"
+                 maxlength="70" ng-blur="validate()">
         </div>
-      </wc-validation-wrapper>
-    </div>
-
-    <div class="form-group">
-      <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('grunddata.skapadav.vardenhet.postnummer')">
-        <div class="row">
-          <label class="col-md-3 control-label">Postnummer *</label>
-          <div class="col-md-9">
-            <input type="text" class="form-control input-5" id="clinicInfoPostalCode"
-                   name="clinicInfo.postalCode" ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.postnummer"
-                   maxlength="6" ng-blur="validate()">
-          </div>
-        </div>
-      </wc-validation-wrapper>
-    </div>
-
-    <div class="form-group">
-      <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('grunddata.skapadav.vardenhet.postort')">
-        <div class="row">
-          <label class="col-md-3 control-label">Postort *</label>
-          <div class="col-md-9">
-            <input type="text" class="form-control" id="clinicInfoPostalCity"
-                   name="clinicInfo.postalCity" ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.postort"
-                   maxlength="30" ng-blur="validate()">
-          </div>
-        </div>
-      </wc-validation-wrapper>
-    </div>
-
-    <div class="form-group">
-      <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('grunddata.skapadav.vardenhet.telefonnummer')">
-        <div class="row">
-          <label class="col-md-3 control-label">Telefonnummer *</label>
-          <div class="col-md-9">
-            <input type="text" class="form-control" id="clinicInfoPhone" name="clinicInfo.phone"
-                   ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.telefonnummer" maxlength="20" ng-blur="validate()">
-          </div>
-        </div>
-      </wc-validation-wrapper>
-    </div>
-
+      </div>
+    </wc-validation-wrapper>
   </div>
+
+  <div class="form-horizontal form-group">
+    <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.postnummer')">
+      <div class="row">
+        <label class="col-md-2 control-label">Postnummer *</label>
+        <div class="col-md-10">
+          <input type="text" class="form-control input-5" id="clinicInfoPostalCode"
+                 name="clinicInfo.postalCode" ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.postnummer"
+                 maxlength="6" ng-blur="validate()">
+        </div>
+      </div>
+    </wc-validation-wrapper>
+  </div>
+
+  <div class="form-horizontal form-group">
+    <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.postort')">
+      <div class="row">
+        <label class="col-md-2 control-label">Postort *</label>
+        <div class="col-md-10">
+          <input type="text" class="form-control" id="clinicInfoPostalCity"
+                 name="clinicInfo.postalCity" ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.postort"
+                 maxlength="30" ng-blur="validate()">
+        </div>
+      </div>
+    </wc-validation-wrapper>
+  </div>
+
+  <div class="form-horizontal form-group">
+    <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.telefonnummer')">
+      <div class="row">
+        <label class="col-md-2 control-label">Telefonnummer *</label>
+        <div class="col-md-10">
+          <input type="text" class="form-control" id="clinicInfoPhone" name="clinicInfo.phone"
+                 ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.telefonnummer" maxlength="20" ng-blur="validate()">
+        </div>
+      </div>
+    </wc-validation-wrapper>
+  </div>
+
 </div>
