--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/css/ts-diabetes.scss
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/css/ts-diabetes.scss
@@ -31,11 +31,40 @@ This is to avoid leaking module specific style rules outside of it's intended co
     margin-bottom: 0;
   }
 
-  h5.inline-heading {
-    padding: 20px 0 5px;
+  input[type="radio"] {
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .input-year {
     width: 4em;
   }
+
+  .intyg-block {
+    #vardenhetNamn label {
+      font-weight: 500;
+      padding-bottom: 10px;
+    }
+    .control-label {
+      white-space: nowrap;
+      text-align: left;
+    }
+    .form-group {
+      padding-bottom: 5px;
+    }
+  }
+
+  .radio {
+    span {
+      margin-left: 20px;
+    }
+  }
+  .text-center {
+    text-align: center;
+  }
+
+  h5.inline-heading {
+    padding: 20px 0 5px;
+  }
+
 }
