--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/identity.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/identity.html
@@ -11,12 +11,11 @@
     <wc-validation-group field-type="check-group" validations="viewState.getValidationErrors('identitet')">
       <div class="clearfix">
         <label class="radio checkbox-columns col-md-6" ng-repeat="v in viewState.identitet">
-          <input
-            id="identity{{$index}}" name="identity{{$index}}" type="radio" value="{{v.id}}"
-            ng-model="viewState.intygModel.vardkontakt.idkontroll" ng-change="validate()">
-          {{v.label}}
+          <input id="identity{{$index}}" name="identity{{$index}}" type="radio" value="{{v.id}}" ng-model="viewState.intygModel.vardkontakt.idkontroll" ng-change="validate()">
+          <span>{{v.label}}</span>
         </label>
       </div>
+    </wc-validation-group>
   </div>
   <div class="alert alert-info">
     <span dynamic-label key="FRM_1.RBK" style="white-space:pre-line"></span>
