--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/patient.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/patient.html
@@ -1,53 +1,47 @@
 <a id="anchor-patient" name="anchor.patientadress"></a>
 <div wc-field field-label="common.intyg.patientadress" field-has-errors="viewState.common.validation.messagesGrouped.patientadress" id="patientForm">
 
-  <div class="form-horizontal">
-    <div class="form-group">
-      <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('grunddata.patient.postadress')">
-        <div class="row">
-          <label class="col-md-3 control-label"><span message key="ts-diabetes.form.postadress"></span> *</label>
-          <div class="col-md-9">
-            <input type="text" class="form-control input-full" id="patientPostadress"
-                   name="viewState.intygModel.grundData.patient.postadress" ng-model="viewState.intygModel.grundData.patient.postadress" maxlength="50" wc-focus-on="focusFirstInput"
-                   ng-change="validate()">
-          </div>
-        </div>
-      </wc-validation-wrapper>
-    </div>
-
-    <div class="form-group">
-      <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('grunddata.patient.postnummer')">
-        <div class="row">
-          <label class="col-md-3 control-label"><span message key="ts-diabetes.form.postnummer"></span> *</label>
-          <div class="col-md-9">
-            <input type="text" class="form-control input-5" id="patientPostnummer"
-                   name="viewState.intygModel.grundData.patient.postnummer" ng-model="viewState.intygModel.grundData.patient.postnummer" maxlength="6"
-                   ng-change="validate()">
-          </div>
-        </div>
-      </wc-validation-wrapper>
-    </div>
-
-    <div class="form-group">
-      <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('grunddata.patient.postort')">
-        <div class="row">
-          <label class="col-md-3 control-label"><span message key="ts-diabetes.form.postort"></span> *</label>
-          <div class="col-md-9">
-            <input type="text" class="form-control" id="patientPostort" name="viewState.intygModel.grundData.patient.postort"
-                   ng-model="viewState.intygModel.grundData.patient.postort" maxlength="25"
-                   ng-change="validate()">
-          </div>
-        </div>
-      </wc-validation-wrapper>
-    </div>
-
-    <div class="form-group" wc-authority="HANTERA_PERSONUPPGIFTER">
+  <div class="form-horizontal form-group">
+    <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('grunddata.patient.postadress')">
       <div class="row">
-        <label class="col-md-3 control-label"></label>
-        <div class="col-md-9">
-        <wc-utkast-patient-address-updater patient-model="viewState.intygModel.grundData.patient" form="certForm"></wc-utkast-patient-address-updater>
+        <label class="col-md-2 control-label"><span message key="ts-diabetes.form.postadress"></span> *</label>
+        <div class="col-md-10">
+          <input type="text" class="form-control input-full" id="patientPostadress"
+                 name="viewState.intygModel.grundData.patient.postadress" ng-model="viewState.intygModel.grundData.patient.postadress" maxlength="50" wc-focus-on="focusFirstInput" ng-change="validate()">
+        </div>
       </div>
-    </div>
+    </wc-validation-wrapper>
+  </div>
+
+  <div class="form-horizontal form-group">
+    <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('grunddata.patient.postnummer')">
+      <div class="row">
+        <label class="col-md-2 control-label"><span message key="ts-diabetes.form.postnummer"></span> *</label>
+        <div class="col-md-10">
+          <input type="text" class="form-control input-5" id="patientPostnummer"
+                 name="viewState.intygModel.grundData.patient.postnummer" ng-model="viewState.intygModel.grundData.patient.postnummer" maxlength="6" ng-change="validate()">
+        </div>
+      </div>
+    </wc-validation-wrapper>
+  </div>
+
+  <div class="form-horizontal form-group">
+    <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('grunddata.patient.postort')">
+      <div class="row">
+        <label class="col-md-2 control-label"><span message key="ts-diabetes.form.postort"></span> *</label>
+        <div class="col-md-10">
+          <input type="text" class="form-control" id="patientPostort" name="viewState.intygModel.grundData.patient.postort"
+                 ng-model="viewState.intygModel.grundData.patient.postort" maxlength="25" ng-change="validate()">
+        </div>
+      </div>
+    </wc-validation-wrapper>
+  </div>
+
+  <div class="form-horizontal form-group" wc-authority="HANTERA_PERSONUPPGIFTER">
+    <div class="row">
+      <label class="col-md-2 control-label"></label>
+      <div class="col-md-10">
+      <wc-utkast-patient-address-updater patient-model="viewState.intygModel.grundData.patient" form="certForm"></wc-utkast-patient-address-updater>
     </div>
   </div>
 </div>
