--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/identity.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/identity.html
@@ -7,7 +7,7 @@
      field-required="true"
      id="identitetForm">
 
-  <div class="form-group">
+  <div class="row form-group">
     <wc-validation-group field-type="check-group" validations="viewState.getValidationErrors('identitet')">
       <div class="clearfix">
         <label class="radio checkbox-columns col-md-6" ng-repeat="v in viewState.identitet">
